--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,13 @@ authors = [
     {name = "Peter Thomas Barrow", email = "peter.barrow.93@gmail.com"}
 ]
 readme = "README.md"
+dependencies = ["serial", "telnetlib"]
+license = {file = "LICENSE"}
+
+[project.urls]
+Repository = "https://github.com/Free-Space-QKD-Lab-HWU/pypiezosystemsjena.git"
+Issues = "https://github.com/Free-Space-QKD-Lab-HWU/pypiezosystemsjena/issues"
 
 [build-system]
-requires = ["wheel", "serial", "telnetlib"]
+requires = ["wheel", "mkdocs", "mkdocs-material", "mkdocstrings"]
 build-backend = "setuptools.build_meta"
