--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Peter Thomas Barrow", email = "peter.barrow.93@gmail.com"}
 ]
 readme = "README.md"
-dependencies = ["pyserial", "telnetlib"]
+dependencies = ["pyserial"]
 license = {file = "LICENSE"}
 
 [project.urls]
